added form links

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
                     </ul>
                 </div>
                 <div class="rnav">
-                    <button onclick="window.location.href='https://docs.google.com/forms/u/1/d/e/1FAIpQLSfZqLbRdgaZCRw4wlbsYR4047YXWDags1RKlcbHkRYfaOG_rw/viewform?usp=send_form';">BOOK NOW</button>
+                    <button onclick="window.location.href='https://forms.gle/SuH7Q75FXi4cJ9p46';">BOOK NOW</button>
                 </div>
                 </nav>
                  <div class="content">
                     <img src="./ASSETS/RangRave_white.png" alt="RangRave">
                     <h3 id="Biggest">Biggest holi party in Jaipur!!!</h3>
                     <h5>Experience the vibrant hues of joy at Jaipur's biggest Holi bash, where traditions meet modern revelry. Join us for an unforgettable celebration filled with music, dance, and a riot of colors amidst the historic splendor of the Pink City! <br> Save the dates✨✨ </h5>
-                    <button #id="few" onclick="window.location.href='https://docs.google.com/forms/u/1/d/e/1FAIpQLSfZqLbRdgaZCRw4wlbsYR4047YXWDags1RKlcbHkRYfaOG_rw/viewform?usp=send_form';">FEW PASSES LEFT</button>
+                    <button #id="few" onclick="window.location.href='https://forms.gle/SuH7Q75FXi4cJ9p46';">FEW PASSES LEFT</button>
                 </div>   
             </div>
         </div>
