--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
                 </nav>
                  <div class="content">
                     <img src="./ASSETS/RangRave_white.png" alt="RangRave">
-                    <h3 id="Biggest">Biggest holi party in Jaipur!!!</h3>
+                    <h2 id="Biggest">24th March, 10 AM to 4 PM!</h2>
                     <h5>Experience the vibrant hues of joy at Jaipur's biggest Holi bash, where traditions meet modern revelry. Join us for an unforgettable celebration filled with music, dance, and a riot of colors amidst the historic splendor of the Pink City! <br> Save the dates✨✨ </h5>
                     <button #id="few" onclick="window.location.href='https://forms.gle/SuH7Q75FXi4cJ9p46';">FEW PASSES LEFT</button>
                 </div>   
