--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
                 </nav>
                  <div class="content">
                     <img src="./ASSETS/RangRave_white.png" alt="RangRave">
-                    <h2 id="Biggest">24th March, 10 AM to 4 PM!</h2>
+                    <h3 id="Biggest">24th March, 10 AM to 4 PM!</h3>
                     <h5>Experience the vibrant hues of joy at Jaipur's biggest Holi bash, where traditions meet modern revelry. Join us for an unforgettable celebration filled with music, dance, and a riot of colors amidst the historic splendor of the Pink City! <br> Save the dates✨✨ </h5>
                     <button #id="few" onclick="window.location.href='https://forms.gle/SuH7Q75FXi4cJ9p46';">FEW PASSES LEFT</button>
                 </div>   
@@ -89,7 +89,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
         </div>
         <div class="page3"id="page3">
             <div class="bottom">
-                <h1 id="sponsors">OUR SPONSORS</h1>
+                <h1 id="sponsors">OUR SPONSORS LOGO CHANGE KARNI HAI</h1>
                 <div class="imgdiv"><img src="./faburn_LOGOOGOG.png" alt=""style="width:30vw;"></div>
                 <div class="imgdiv"><img src="./bonn-1-1.png" alt=""style="width:30vw;"></div>
                     <div class="bottom1">
@@ -101,7 +101,7 @@ href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
                         </p>
                         </div>
                     </div>
-                    <h1>VENUE: CENTRAL TOWN</h1>
+                    <h1>VENUE: CENTRAL TOWN {ypooora change karna hai}</h1>
                     <div class="swiper mySwiper">
                         <div class="swiper-wrapper">
                           <div class="swiper-slide">
